hphp/hack/test/typecheck/as_expression/option2.php.exp
File "option2.php", line 7, characters 5-6:
Invalid argument (Typing[4110])
File "option2.php", line 3, characters 13-15:
Expected int
File "option2.php", line 6, characters 10-15:
But got string
