hphp/hack/test/typecheck/as_expression/option2.php
<?hh // partial

function g(?int $x) {}

function f(mixed $x) {
  $x as ?string;
  g($x);
}
